[gd_scene load_steps=35 format=2]

[ext_resource path="res://characters/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/fps/unarmed/WEAPON10.CIF_0-0.PNG" type="Texture" id=2]
[ext_resource path="res://assets/ui/hud/action_bar.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/hud/empty_bar_decoration.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/hud/health_bar.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/hud/speed_bar.png" type="Texture" id=6]
[ext_resource path="res://assets/font/Minecraft.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://characters/player/Hands.gd" type="Script" id=8]
[ext_resource path="res://assets/player/fps/unarmed/WEAPON10.CIF_2-2.PNG" type="Texture" id=9]
[ext_resource path="res://assets/player/fps/unarmed/WEAPON10.CIF_2-4.PNG" type="Texture" id=10]
[ext_resource path="res://assets/player/fps/unarmed/WEAPON10.CIF_2-3.PNG" type="Texture" id=11]
[ext_resource path="res://assets/player/fps/unarmed/WEAPON10.CIF_2-1.PNG" type="Texture" id=12]
[ext_resource path="res://assets/player/fps/unarmed/WEAPON10.CIF_2-0.PNG" type="Texture" id=13]
[ext_resource path="res://assets/player/fps/dagger/WEAPON02.CIF_6-4_Elven.png" type="Texture" id=14]
[ext_resource path="res://assets/player/fps/dagger/WEAPON02.CIF_6-2_Elven.png" type="Texture" id=15]
[ext_resource path="res://assets/player/fps/dagger/WEAPON02.CIF_6-3_Elven.png" type="Texture" id=16]
[ext_resource path="res://assets/player/fps/dagger/WEAPON02.CIF_0-0_Elven.png" type="Texture" id=17]
[ext_resource path="res://assets/player/fps/dagger/WEAPON02.CIF_6-0_Elven.png" type="Texture" id=18]
[ext_resource path="res://assets/player/fps/dagger/WEAPON02.CIF_6-1_Elven.png" type="Texture" id=19]
[ext_resource path="res://assets/ui/hud/magic_bar.png" type="Texture" id=20]
[ext_resource path="res://sounds/weapons/Earthshaker_attack_impact2.mp3.wav" type="AudioStream" id=21]
[ext_resource path="res://sounds/weapons/Earthshaker_attack_impact3.mp3.wav" type="AudioStream" id=22]
[ext_resource path="res://sounds/weapons/Earthshaker_attack_impact1.mp3.wav" type="AudioStream" id=23]
[ext_resource path="res://sounds/weapons/Shared_sword_impact2.mp3.wav" type="AudioStream" id=24]
[ext_resource path="res://sounds/weapons/Shared_sword_impact1.mp3.wav" type="AudioStream" id=25]
[ext_resource path="res://sounds/weapons/Shared_sword_impact3.mp3.wav" type="AudioStream" id=26]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 14 ) ],
"loop": false,
"name": "dagger_attack_00",
"speed": 9.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": false,
"name": "dagger_idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": false,
"name": "fist_attack_00",
"speed": 9.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "fist_idle",
"speed": 0.0
} ]

[sub_resource type="BoxShape" id=4]

[sub_resource type="DynamicFont" id=6]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 4
extra_spacing_space = 2
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.12549, 0.12549, 0.25098, 0.878431 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 50.0
expand_margin_right = 50.0
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[sub_resource type="DynamicFont" id=7]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="BoxShape" id=9]

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="HurtBox" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="TopHurtBox" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0.5, 0 )
visible = false
shape = SubResource( 1 )
disabled = true

[node name="LeftHurtBox" type="CollisionShape" parent="."]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
visible = false
shape = SubResource( 1 )
disabled = true

[node name="BottomHurtBox" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, -0.5, 0 )
visible = false
shape = SubResource( 1 )
disabled = true

[node name="RightHurtBox" type="CollisionShape" parent="."]
transform = Transform( 0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )
visible = false
shape = SubResource( 1 )
disabled = true

[node name="FrontRay" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -2 )

[node name="FirstPerson" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="FirstPerson"]
fov = 80.0

[node name="Hands" type="Spatial" parent="FirstPerson"]
script = ExtResource( 8 )

[node name="LeftHand" type="AnimatedSprite3D" parent="FirstPerson/Hands"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0, -0.5, -0.5, -0.8 )
flip_h = true
fixed_size = true
frames = SubResource( 2 )
animation = "fist_idle"
playing = true

[node name="RightHand" type="AnimatedSprite3D" parent="FirstPerson/Hands"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0, 0.5, -0.5, -0.8 )
fixed_size = true
frames = SubResource( 2 )
animation = "dagger_idle"

[node name="EnemyDetector" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="CollisionShape" type="CollisionShape" parent="EnemyDetector"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 4 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.998217, 0.973616 )

[node name="PlayerData" type="HBoxContainer" parent="HUD"]
margin_right = 58.0
margin_bottom = 51.0
rect_scale = Vector2( 3, 2 )

[node name="Attributes" type="VBoxContainer" parent="HUD/PlayerData"]
margin_right = 58.0
margin_bottom = 68.0
custom_constants/separation = 0

[node name="Hp" type="TextureProgress" parent="HUD/PlayerData/Attributes"]
margin_right = 58.0
margin_bottom = 17.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="Ap" type="TextureProgress" parent="HUD/PlayerData/Attributes"]
margin_top = 17.0
margin_right = 58.0
margin_bottom = 34.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[node name="Mp" type="TextureProgress" parent="HUD/PlayerData/Attributes"]
margin_top = 34.0
margin_right = 58.0
margin_bottom = 51.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 20 )

[node name="Sp" type="TextureProgress" parent="HUD/PlayerData/Attributes"]
margin_top = 51.0
margin_right = 58.0
margin_bottom = 68.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 6 )

[node name="DialogueContainer" type="Control" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -85.2
margin_right = 512.0
margin_bottom = -85.2

[node name="Label" type="Label" parent="HUD/DialogueContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -85.0
margin_right = 514.0
margin_bottom = 81.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 0
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
align = 1
valign = 1

[node name="CombatLabel" type="Control" parent="HUD/DialogueContainer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="AttackLabel" type="Label" parent="HUD/DialogueContainer/CombatLabel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -18.0
margin_right = -124.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "[Q] Attack"

[node name="DefendLabel" type="Label" parent="HUD/DialogueContainer/CombatLabel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 119.5
margin_top = -18.0
margin_right = 303.5
margin_bottom = 14.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "[E] Defend"

[node name="Attacks" type="Spatial" parent="."]

[node name="Fist" type="Area" parent="Attacks"]

[node name="CollisionShape" type="CollisionShape" parent="Attacks/Fist"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, -2 )
shape = SubResource( 9 )
disabled = true

[node name="Dagger" type="Area" parent="Attacks"]

[node name="CollisionShape" type="CollisionShape" parent="Attacks/Dagger"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, -2 )
shape = SubResource( 9 )
disabled = true

[node name="Audio" type="Node" parent="."]

[node name="Fist" type="Node" parent="Audio"]

[node name="Fist00" type="AudioStreamPlayer" parent="Audio/Fist"]
stream = ExtResource( 23 )

[node name="Fist01" type="AudioStreamPlayer" parent="Audio/Fist"]
stream = ExtResource( 21 )

[node name="Fist02" type="AudioStreamPlayer" parent="Audio/Fist"]
stream = ExtResource( 22 )

[node name="Dagger" type="Node" parent="Audio"]

[node name="Dagger00" type="AudioStreamPlayer" parent="Audio/Dagger"]
stream = ExtResource( 25 )
pitch_scale = 1.2

[node name="Dagger01" type="AudioStreamPlayer" parent="Audio/Dagger"]
stream = ExtResource( 24 )
pitch_scale = 1.2

[node name="Dagger02" type="AudioStreamPlayer" parent="Audio/Dagger"]
stream = ExtResource( 26 )
pitch_scale = 1.2

[connection signal="animation_finished" from="FirstPerson/Hands/LeftHand" to="." method="_on_LeftHand_animation_finished"]
[connection signal="animation_finished" from="FirstPerson/Hands/RightHand" to="." method="_on_RightHand_animation_finished"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="body_entered" from="Attacks/Fist" to="." method="_on_Fist_body_entered"]
[connection signal="body_entered" from="Attacks/Dagger" to="." method="_on_Dagger_body_entered"]
